--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="js/menu.js"></script>
 	<script src="js/mathpart.js"></script>
 </head>
-<body data-dir="yes this is git version is works!!!!" der="новое изменение файла index.html">
+<body data-dir="yes this is git version is works!!!!" der="новое изменение файла index.html" yesa>
 	<div id="particles-js"></div>
 	<div class="NameandSlogan">
 		<span class="spanName">Evelyn</span><br>
